--- a/dokumentaatio/pit-raportti/201702172354/hukkis.hyviksiijapahiksii.creatures/index.html
+++ b/dokumentaatio/pit-raportti/201702172354/hukkis.hyviksiijapahiksii.creatures/index.html
@@ -72,9 +72,9 @@
     </thead>
     <tbody>
         <tr>
-            <td>3</td>
-            <td>91% <div class="coverage_bar"><div class="coverage_complete" style="width:91%"></div><div class="coverage_ledgend">58/64</div></div></td>
-            <td>74% <div class="coverage_bar"><div class="coverage_complete" style="width:74%"></div><div class="coverage_ledgend">32/43</div></div></td>
+            <td>4</td>
+            <td>54% <div class="coverage_bar"><div class="coverage_complete" style="width:54%"></div><div class="coverage_ledgend">56/104</div></div></td>
+            <td>46% <div class="coverage_bar"><div class="coverage_complete" style="width:46%"></div><div class="coverage_ledgend">30/65</div></div></td>
         </tr>
     </tbody>
 </table>
@@ -99,14 +99,20 @@
 
         <tr>
             <td><a href="./Creature.java.html">Creature.java</a></td>
-            <td><div class="coveragePercentage">93% </div><div class="coverage_bar"><div class="coverage_complete" style="width:93%"></div><div class="coverage_ledgend">41/44</div></div></td>
-            <td><div class="coveragePercentage">75% </div><div class="coverage_bar"><div class="coverage_complete" style="width:75%"></div><div class="coverage_ledgend">21/28</div></div></td>
+            <td><div class="coveragePercentage">93% </div><div class="coverage_bar"><div class="coverage_complete" style="width:93%"></div><div class="coverage_ledgend">39/42</div></div></td>
+            <td><div class="coveragePercentage">79% </div><div class="coverage_bar"><div class="coverage_complete" style="width:79%"></div><div class="coverage_ledgend">19/24</div></div></td>
         </tr>
 
         <tr>
             <td><a href="./EmptySlot.java.html">EmptySlot.java</a></td>
             <td><div class="coveragePercentage">79% </div><div class="coverage_bar"><div class="coverage_complete" style="width:79%"></div><div class="coverage_ledgend">11/14</div></div></td>
             <td><div class="coveragePercentage">82% </div><div class="coverage_bar"><div class="coverage_complete" style="width:82%"></div><div class="coverage_ledgend">9/11</div></div></td>
+        </tr>
+
+        <tr>
+            <td><a href="./Hero.java.html">Hero.java</a></td>
+            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/42</div></div></td>
+            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/26</div></div></td>
         </tr>
 
      </tbody>
