--- a/dokumentaatio/pit-raportti/201703052035/hukkis.hyviksiijapahiksii.party/index.html
+++ b/dokumentaatio/pit-raportti/201703052035/hukkis.hyviksiijapahiksii.party/index.html
@@ -61,7 +61,7 @@
 
 <h1>Pit Test Coverage Report</h1>
 <h2>Package Summary</h2>
-<h3>hukkis.hyviksiijapahiksii.combat</h3>
+<h3>hukkis.hyviksiijapahiksii.party</h3>
 <table>
     <thead>
         <tr>
@@ -72,9 +72,9 @@
     </thead>
     <tbody>
         <tr>
-            <td>1</td>
-            <td>19% <div class="coverage_bar"><div class="coverage_complete" style="width:19%"></div><div class="coverage_ledgend">13/70</div></div></td>
-            <td>12% <div class="coverage_bar"><div class="coverage_complete" style="width:12%"></div><div class="coverage_ledgend">6/51</div></div></td>
+            <td>2</td>
+            <td>100% <div class="coverage_bar"><div class="coverage_complete" style="width:100%"></div><div class="coverage_ledgend">31/31</div></div></td>
+            <td>81% <div class="coverage_bar"><div class="coverage_complete" style="width:81%"></div><div class="coverage_ledgend">17/21</div></div></td>
         </tr>
     </tbody>
 </table>
@@ -92,9 +92,15 @@
     <tbody>
 
         <tr>
-            <td><a href="./Combat.java.html">Combat.java</a></td>
-            <td><div class="coveragePercentage">19% </div><div class="coverage_bar"><div class="coverage_complete" style="width:19%"></div><div class="coverage_ledgend">13/70</div></div></td>
-            <td><div class="coveragePercentage">12% </div><div class="coverage_bar"><div class="coverage_complete" style="width:12%"></div><div class="coverage_ledgend">6/51</div></div></td>
+            <td><a href="./EnemyPartyGenerator.java.html">EnemyPartyGenerator.java</a></td>
+            <td><div class="coveragePercentage">100% </div><div class="coverage_bar"><div class="coverage_complete" style="width:100%"></div><div class="coverage_ledgend">13/13</div></div></td>
+            <td><div class="coveragePercentage">83% </div><div class="coverage_bar"><div class="coverage_complete" style="width:83%"></div><div class="coverage_ledgend">5/6</div></div></td>
+        </tr>
+
+        <tr>
+            <td><a href="./Party.java.html">Party.java</a></td>
+            <td><div class="coveragePercentage">100% </div><div class="coverage_bar"><div class="coverage_complete" style="width:100%"></div><div class="coverage_ledgend">18/18</div></div></td>
+            <td><div class="coveragePercentage">80% </div><div class="coverage_bar"><div class="coverage_complete" style="width:80%"></div><div class="coverage_ledgend">12/15</div></div></td>
         </tr>
 
      </tbody>
