--- a/dokumentaatio/pit-raportti/201703052035/hukkis.hyviksiijapahiksii.combat/index.html
+++ b/dokumentaatio/pit-raportti/201703052035/hukkis.hyviksiijapahiksii.combat/index.html
@@ -61,7 +61,7 @@
 
 <h1>Pit Test Coverage Report</h1>
 <h2>Package Summary</h2>
-<h3>hukkis.hyviksiijapahiksii.party</h3>
+<h3>hukkis.hyviksiijapahiksii.combat</h3>
 <table>
     <thead>
         <tr>
@@ -73,8 +73,8 @@
     <tbody>
         <tr>
             <td>1</td>
-            <td>86% <div class="coverage_bar"><div class="coverage_complete" style="width:86%"></div><div class="coverage_ledgend">18/21</div></div></td>
-            <td>63% <div class="coverage_bar"><div class="coverage_complete" style="width:63%"></div><div class="coverage_ledgend">12/19</div></div></td>
+            <td>98% <div class="coverage_bar"><div class="coverage_complete" style="width:98%"></div><div class="coverage_ledgend">42/43</div></div></td>
+            <td>63% <div class="coverage_bar"><div class="coverage_complete" style="width:63%"></div><div class="coverage_ledgend">20/32</div></div></td>
         </tr>
     </tbody>
 </table>
@@ -92,9 +92,9 @@
     <tbody>
 
         <tr>
-            <td><a href="./Party.java.html">Party.java</a></td>
-            <td><div class="coveragePercentage">86% </div><div class="coverage_bar"><div class="coverage_complete" style="width:86%"></div><div class="coverage_ledgend">18/21</div></div></td>
-            <td><div class="coveragePercentage">63% </div><div class="coverage_bar"><div class="coverage_complete" style="width:63%"></div><div class="coverage_ledgend">12/19</div></div></td>
+            <td><a href="./Combat.java.html">Combat.java</a></td>
+            <td><div class="coveragePercentage">98% </div><div class="coverage_bar"><div class="coverage_complete" style="width:98%"></div><div class="coverage_ledgend">42/43</div></div></td>
+            <td><div class="coveragePercentage">63% </div><div class="coverage_bar"><div class="coverage_complete" style="width:63%"></div><div class="coverage_ledgend">20/32</div></div></td>
         </tr>
 
      </tbody>
